--- a/app/src/main/res/drawable/shape_progressbar_qualifying.xml
+++ b/app/src/main/res/drawable/shape_progressbar_qualifying.xml
@@ -15,14 +15,14 @@
         </clip>
     </item>
     <item android:id="@android:id/progress">
-        <clip>
-            <shape>
-                <corners android:radius="6dp" />
+        <scale android:scaleWidth="100%">
+            <shape android:shape="rectangle">
+                <corners android:radius="50dp" />
                 <gradient
                     android:angle="270"
                     android:endColor="#86249B"
                     android:startColor="#FF34FD" />
             </shape>
-        </clip>
+        </scale>
     </item>
 </layer-list>
