--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -42,6 +42,7 @@
                 android:gravity="center_vertical"
                 android:hint="@string/phone_number_hint"
                 android:maxLength="20"
+                android:singleLine="true"
                 android:textColorHint="#30000000"
                 android:textSize="15sp" />
 
@@ -88,6 +89,7 @@
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
                 android:maxLength="16"
+                android:singleLine="true"
                 android:textColorHint="#30000000"
                 android:textSize="15sp" />
 
