--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,8 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="33dp"
-            android:layout_marginRight="42dp"
             android:layout_marginTop="30dp"
+            android:layout_marginRight="42dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -43,6 +43,7 @@
                 android:hint="请输入您的手机号码"
                 android:inputType="phone"
                 android:maxLength="13"
+                android:singleLine="true"
                 android:textColorHint="#30000000"
                 android:textSize="15sp" />
 
@@ -59,16 +60,16 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="26.5dp"
-            android:layout_marginRight="28.5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="28.5dp"
             android:background="#f0f0f0" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="33dp"
-            android:layout_marginRight="42dp"
             android:layout_marginTop="24dp"
+            android:layout_marginRight="42dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -89,6 +90,7 @@
                 android:hint="@string/verify_code_hint"
                 android:inputType="phone"
                 android:maxLength="6"
+                android:singleLine="true"
                 android:textColorHint="#30000000"
                 android:textSize="15sp" />
 
@@ -109,8 +111,8 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="26.5dp"
-            android:layout_marginRight="28.5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="28.5dp"
             android:background="#f0f0f0" />
 
 
@@ -118,8 +120,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="33dp"
-            android:layout_marginRight="42dp"
             android:layout_marginTop="24dp"
+            android:layout_marginRight="42dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -141,6 +143,7 @@
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
                 android:maxLength="16"
+                android:singleLine="true"
                 android:textColorHint="#30000000"
                 android:textSize="15sp" />
 
@@ -157,8 +160,8 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="26.5dp"
-            android:layout_marginRight="28.5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="28.5dp"
             android:background="#f0f0f0" />
 
         <Button
@@ -166,8 +169,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="26.5dp"
-            android:layout_marginRight="26.5dp"
             android:layout_marginTop="34dp"
+            android:layout_marginRight="26.5dp"
             android:background="@drawable/selector_btn_yellow"
             android:enabled="false"
             android:text="注册"
