--- a/app/src/main/res/layout/activity_retrieve_password.xml
+++ b/app/src/main/res/layout/activity_retrieve_password.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="105dp"
         android:background="@drawable/selector_comm_btn_bg"
         android:enabled="false"
-        android:text="返回登陆页面重新登陆"
+        android:text="返回登录页面重新登录"
         android:textColor="@color/white"
         android:textSize="18sp" />
 
