pk qualifying pk svga

--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -688,8 +688,8 @@
 
                     <com.opensource.svgaplayer.SVGAImageView
                         android:id="@+id/svga_start_pk"
-                        android:layout_width="150dp"
-                        android:layout_height="100dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_centerInParent="true"
                         android:scaleType="fitCenter"
                         app:autoPlay="true" />
