--- a/app/src/main/res/drawable/shape_pk_qualifying.xml
+++ b/app/src/main/res/drawable/shape_pk_qualifying.xml
@@ -2,6 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="5dp" />
-    <solid android:color="#2A284A"/>
+    <gradient
+        android:endColor="#000000"
+        android:startColor="#171444" />
+
 </shape>
