--- a/app/src/main/res/layout/activity_red_bag.xml
+++ b/app/src/main/res/layout/activity_red_bag.xml
@@ -27,7 +27,7 @@
             android:layout_centerVertical="true"
             android:background="@null"
             android:padding="10dp"
-            android:src="@drawable/ic_note_red_bag" />
+            android:src="@drawable/ic_note_common" />
 
 
         <ImageButton
