--- a/app/src/main/res/layout/dialog_pk_qualifying.xml
+++ b/app/src/main/res/layout/dialog_pk_qualifying.xml
@@ -1,83 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="400dp">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp">
+        android:layout_height="match_parent"
+        android:background="@drawable/shape_pk_qualifying"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="585dp"
-            android:background="@drawable/bg_qualifying"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:scaleType="fitStart"
+            android:src="@drawable/bg_qualifying" />
 
-            <RelativeLayout
+        <RelativeLayout
+            android:id="@+id/top_pk_qualifying"
+            android:layout_width="match_parent"
+            android:layout_height="148dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/iv_note_qualifying"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:paddingTop="19dp"
+                android:paddingRight="25dp"
+                android:src="@drawable/ic_note_common" />
+
+            <ImageView
+                android:layout_width="223dp"
+                android:layout_height="135dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="-26dp"
+                android:src="@drawable/ic_season" />
+
+            <TextView
+                android:id="@+id/tv_season_name"
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="75dp"
+                android:gravity="center"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_season_time"
+                android:layout_width="183dp"
+                android:layout_height="22dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="110dp"
+                android:background="@drawable/shape_season"
+                android:gravity="center"
+                android:textColor="#ffd634"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/top_pk_qualifying">
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager_qualifying"
                 android:layout_width="match_parent"
-                android:layout_height="148dp">
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/padding_12"
+                android:layout_marginRight="@dimen/padding_12"
+                android:overScrollMode="never" />
 
-                <ImageView
-                    android:id="@+id/iv_note_qualifying"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:paddingTop="19dp"
-                    android:paddingRight="25dp"
-                    android:src="@drawable/ic_note_red_bag" />
-
-                <ImageView
-                    android:layout_width="223dp"
-                    android:layout_height="135dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="-26dp"
-                    android:src="@drawable/ic_season" />
-
-                <TextView
-                    android:id="@+id/tv_season_name"
-                    android:layout_width="45dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="75dp"
-                    android:gravity="center"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_season_time"
-                    android:layout_width="183dp"
-                    android:layout_height="22dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="110dp"
-                    android:background="@drawable/shape_season"
-                    android:gravity="center"
-                    android:textColor="#ffd634"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-
-            <FrameLayout
+            <com.whzl.mengbi.ui.widget.tablayout.TabLayout
+                android:id="@+id/tab_layout_qualifying"
+                style="@style/QualifyingTab"
                 android:layout_width="match_parent"
-                android:layout_height="440dp">
+                android:layout_height="30dp" />
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/viewpager_qualifying"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/padding_12"
-                    android:layout_marginRight="@dimen/padding_12"
-                    android:overScrollMode="never" />
-
-                <com.whzl.mengbi.ui.widget.tablayout.TabLayout
-                    android:id="@+id/tab_layout_qualifying"
-                    style="@style/QualifyingTab"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp" />
-
-            </FrameLayout>
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+        </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 </LinearLayout>
