--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -439,4 +439,22 @@
         <item name="android:progressDrawable">@drawable/shape_progressbar_qualifying</item>
 
     </style>
+
+    <style name="Tab_Redpack_Dialog" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">#fb3c22</item>
+        <item name="tabIndicatorHeight">3dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="tabBackground">@android:color/transparent</item>
+        <item name="tabTextAppearance">@style/TabText_Redpack_Dialog</item>
+        <item name="tabSelectedTextColor">#fb3c22</item>
+        <item name="tabGravity">center</item>
+        <item name="tabMode">fixed</item>
+    </style>
+
+    <style name="TabText_Redpack_Dialog" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#757575</item>
+        <item name="textAllCaps">true</item>
+    </style>
+
 </resources>
