--- a/app/src/main/res/drawable/shape_round_rect_supercar_capture.xml
+++ b/app/src/main/res/drawable/shape_round_rect_supercar_capture.xml
@@ -2,12 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners
-        android:radius="20dp"/>
+    <corners android:radius="20dp" />
 
     <gradient
-        android:angle="45"
-        android:endColor="#ED88FF"
-        android:centerColor="#F575C5"
-        android:startColor="#FD618A" />
+        android:endColor="#FF5DFF"
+        android:startColor="#6440FF" />
 </shape>
