--- a/app/src/main/res/layout/dialog_redpack.xml
+++ b/app/src/main/res/layout/dialog_redpack.xml
@@ -67,7 +67,8 @@
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewpager_redpack"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:overScrollMode="never" />
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
