--- a/app/src/main/res/layout/fragment_mengbi_redpack.xml
+++ b/app/src/main/res/layout/fragment_mengbi_redpack.xml
@@ -20,12 +20,14 @@
             android:textColor="#323232"
             android:textSize="11sp" />
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@null"
             android:gravity="end"
-            android:text="5000"
+            android:inputType="number"
+            android:singleLine="true"
             android:textColor="#757575"
             android:textSize="12sp" />
 
@@ -63,12 +65,15 @@
                 android:textColor="#323232"
                 android:textSize="11sp" />
 
-            <TextView
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="@null"
                 android:gravity="end"
-                android:text="100"
+                android:inputType="number"
+                android:singleLine="true"
+                android:text="1"
                 android:textColor="#757575"
                 android:textSize="15sp" />
 
@@ -110,7 +115,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="end"
-                android:text="萌币"
                 android:textColor="#757575"
                 android:textSize="12sp" />
 
@@ -137,11 +141,13 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <TextView
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@null"
                 android:gravity="center"
-                android:text="12"
+                android:inputType="number"
+                android:text="1"
                 android:textColor="#757575"
                 android:textSize="12sp" />
         </LinearLayout>
