--- a/app/src/main/res/layout/fragment_mengbi_redpack.xml
+++ b/app/src/main/res/layout/fragment_mengbi_redpack.xml
@@ -96,6 +96,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/container_condition_mengbi"
             android:layout_width="206dp"
             android:layout_height="46.5dp"
             android:background="@color/white"
@@ -111,6 +112,7 @@
                 android:textSize="11sp" />
 
             <TextView
+                android:id="@+id/tv_condition_mengbi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
