--- a/app/src/main/res/layout/item_goods_redpack.xml
+++ b/app/src/main/res/layout/item_goods_redpack.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="205.5dp"
+    android:layout_width="290dp"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_item_condition"
+        android:id="@+id/tv_item_goods"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
