--- a/app/src/main/res/layout/fragment_gift_redpack.xml
+++ b/app/src/main/res/layout/fragment_gift_redpack.xml
@@ -68,6 +68,7 @@
                 android:background="@null"
                 android:gravity="end"
                 android:inputType="number"
+                android:maxLength="4"
                 android:singleLine="true"
                 android:textColor="#757575"
                 android:textSize="15sp" />
@@ -99,7 +100,7 @@
                 android:textSize="11sp" />
 
             <EditText
-                android:id="@+id/et_gift"
+                android:id="@+id/et_people_gift"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -178,6 +179,7 @@
             android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/et_condition_num_gift"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@null"
