--- a/app/src/main/res/layout/fragment_gift_redpack.xml
+++ b/app/src/main/res/layout/fragment_gift_redpack.xml
@@ -215,6 +215,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_gift"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="277dp"
         android:layout_height="32.5dp"
