--- a/app/src/main/res/layout/fragment_mengbi_redpack.xml
+++ b/app/src/main/res/layout/fragment_mengbi_redpack.xml
@@ -181,6 +181,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_mengbi"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="277dp"
         android:layout_height="32.5dp"
