--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -915,6 +915,30 @@
                         app:layout_constraintTop_toTopOf="parent" />
                 </android.support.constraint.ConstraintLayout>
 
+                <LinearLayout
+                    android:id="@+id/container_room_redpacket"
+                    android:layout_width="29dp"
+                    android:layout_height="34dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="12.5dp"
+                    android:background="@drawable/icon_room_redpack"
+                    android:gravity="center_horizontal|bottom"
+                    android:visibility="gone"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/ratio_layout">
+
+                    <TextView
+                        android:id="@+id/tv_room_redpacket"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="2dp"
+                        android:gravity="bottom"
+                        android:text="ss"
+                        android:textColor="#ffed4e"
+                        android:textSize="9sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
                 <RelativeLayout
                     android:id="@+id/rl_red_bag_live"
                     android:layout_width="35dp"
