--- a/app/src/main/res/layout/item_pk_follow.xml
+++ b/app/src/main/res/layout/item_pk_follow.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="25dp"
+    android:layout_height="27dp"
     android:layout_marginLeft="3dp"
-    android:layout_marginRight="3dp"
-    android:layout_height="27dp">
+    android:layout_marginRight="3dp">
 
     <com.whzl.mengbi.ui.widget.view.CircleImageView
         android:id="@+id/iv_circle_head"
@@ -21,6 +21,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@drawable/shape_pk_follow"
+        android:includeFontPadding="false"
         android:paddingLeft="4.5dp"
         android:paddingRight="4.5dp"
         android:singleLine="true"
