--- a/app/src/main/res/layout/dialog_room_redpacket.xml
+++ b/app/src/main/res/layout/dialog_room_redpacket.xml
@@ -39,7 +39,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tv_name"
+                android:id="@+id/tv_name_game_packet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="2.5dp"
