--- a/app/src/main/res/layout/fragment_mengbi_redpack.xml
+++ b/app/src/main/res/layout/fragment_mengbi_redpack.xml
@@ -28,6 +28,7 @@
             android:background="@null"
             android:gravity="end"
             android:inputType="number"
+            android:maxLength="9"
             android:singleLine="true"
             android:textColor="#757575"
             android:textSize="12sp" />
