--- a/app/src/main/res/layout/dialog_pk_qualifying.xml
+++ b/app/src/main/res/layout/dialog_pk_qualifying.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/white_toolbar" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
