--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -240,8 +240,8 @@
                                 android:layout_width="1000dp"
                                 android:layout_height="23dp"
                                 android:layout_marginLeft="5dp"
-                                android:includeFontPadding="false"
                                 android:gravity="center_vertical"
+                                android:includeFontPadding="false"
                                 android:singleLine="true"
                                 android:textSize="12sp" />
                         </android.support.constraint.ConstraintLayout>
@@ -663,7 +663,7 @@
                         android:layout_marginBottom="20dp"
                         android:gravity="center_horizontal"
                         android:orientation="vertical"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
 
                         <android.support.constraint.ConstraintLayout
