--- a/app/src/main/res/layout/fragment_gift_redpack.xml
+++ b/app/src/main/res/layout/fragment_gift_redpack.xml
@@ -107,6 +107,7 @@
                 android:background="@null"
                 android:gravity="end"
                 android:inputType="number"
+                android:maxLength="6"
                 android:singleLine="true"
                 android:text="1"
                 android:textColor="#757575"
@@ -187,6 +188,7 @@
                 android:inputType="number"
                 android:singleLine="true"
                 android:text="1"
+                android:maxLength="4"
                 android:textColor="#757575"
                 android:textSize="12sp" />
         </LinearLayout>
