--- a/app/src/main/res/layout/fragment_mengbi_redpack.xml
+++ b/app/src/main/res/layout/fragment_mengbi_redpack.xml
@@ -77,6 +77,7 @@
                 android:inputType="number"
                 android:singleLine="true"
                 android:text="1"
+                android:maxLength="6"
                 android:textColor="#757575"
                 android:textSize="15sp" />
 
@@ -154,6 +155,7 @@
                 android:gravity="center"
                 android:inputType="number"
                 android:text="1"
+                android:maxLength="6"
                 android:textColor="#757575"
                 android:textSize="12sp" />
         </LinearLayout>
