--- a/app/src/main/res/drawable/selector_live_activity_pager_index.xml
+++ b/app/src/main/res/drawable/selector_live_activity_pager_index.xml
@@ -2,15 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape android:shape="oval">
-            <solid android:color="#ffd834" />
-            <stroke android:width="0.5dp" android:color="#ff7522" />
+            <solid android:color="#ffffff" />
         </shape>
     </item>
 
     <item>
         <shape android:shape="oval">
-            <solid android:color="#80fffdee" />
-            <stroke android:width="0.5dp" android:color="#fdb386" />
+            <solid android:color="#B5B7BB" />
         </shape>
     </item>
 
