--- a/app/src/main/res/drawable/shape_contain_pk_rank.xml
+++ b/app/src/main/res/drawable/shape_contain_pk_rank.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#231649" />
+    <solid android:color="#ffffff" />
     <corners android:radius="2dp" />
 </shape>
