--- a/app/src/main/res/drawable/shape_pk_rank.xml
+++ b/app/src/main/res/drawable/shape_pk_rank.xml
@@ -2,8 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners
-        android:topLeftRadius="3dp"
-        android:topRightRadius="3dp" />
-    <solid android:color="#7a5bd3" />
+    <solid android:color="#2980f5" />
+    <corners android:radius="3dp" />
 </shape>
